--- a/assets/index.html
+++ b/assets/index.html
@@ -10,12 +10,11 @@ body {
 
 setTimeout(function () {
     alert('1');
-    window.device.toast("abc");
-    window.strawNativeInterface.exec('UI', 'toast', JSON.stringify({text: 'toast through straw plugin'}), '1');
+    window.straw.exec('ui', 'toast', JSON.stringify({text: 'toast through straw plugin'}), '1');
 }, 1500);
 
 </script>
-<script src="straw-android.js"></script>
+<script src="js/straw-android.js"></script>
 <body>
 Hello, what's-my-ip.
 </body>
