--- a/www-source/jekyll-src/index.html
+++ b/www-source/jekyll-src/index.html
@@ -3,4 +3,14 @@ layout: layout
 title: what's my ip?
 ---
 
-What's my IP address?
+<div class="navbar navbar-inverse navbar-fixed-top">
+  <div class="navbar-inner">
+    <div class="container">
+      <span class="brand">My IP address</span>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <h1>ip</h1>
+</div>
