Implement basic ui

--- a/www-source/jekyll-src/index.html
+++ b/www-source/jekyll-src/index.html
@@ -11,6 +11,13 @@ title: what's my ip?
   </div>
 </div>
 
-<div class="container">
-  <h1>ip</h1>
+<div class="container hero-unit">
+  <p>My IP Address is</p>
+  <div id="ip-addr-progress-bar" class="progress progress-striped active">
+    <div class="bar" style="width: 100%;"></div>
+  </div>
+  <p><strong style="display: none" id="ip-addr-label"></strong></p>
+  <p>
+    <a class="btn btn-primary btn-large">show history</a>
+  </p>
 </div>
