--- a/www-source/jekyll-src/index.html
+++ b/www-source/jekyll-src/index.html
@@ -6,7 +6,10 @@ title: what's my ip?
 <div class="navbar navbar-inverse navbar-fixed-top">
   <div class="navbar-inner">
     <div class="container">
-      <span class="brand">My IP address</span>
+      <span class="brand">
+        <img src="img/ip.png" />
+        My IP address
+      </span>
     </div>
   </div>
 </div>
@@ -16,7 +19,7 @@ title: what's my ip?
   <div id="ip-addr-progress-bar" class="progress progress-striped active">
     <div class="bar" style="width: 100%;"></div>
   </div>
-  <p><strong style="display: none" id="ip-addr-label"></strong></p>
+  <h3 class="text-info" style="display: none; font-weight: bold;" id="ip-addr-label"></h3>
   <p>
     <a class="btn btn-primary btn-large">show history</a>
   </p>
