Modify styles and put debug onclick button

--- a/www-source/jekyll-src/index.html
+++ b/www-source/jekyll-src/index.html
@@ -7,7 +7,7 @@ title: what's my ip?
   <div class="navbar-inner">
     <div class="container">
       <span class="brand">
-        <img src="img/ip.png" />
+        <img src="img/ip.png" width="36" height="36"/>
         My IP address
       </span>
     </div>
@@ -15,12 +15,12 @@ title: what's my ip?
 </div>
 
 <div class="container hero-unit">
-  <p>My IP Address is</p>
+  <p style="font-weight: bold;">My IP Address is</p>
   <div id="ip-addr-progress-bar" class="progress progress-striped active">
     <div class="bar" style="width: 100%;"></div>
   </div>
   <h3 class="text-info" style="display: none; font-weight: bold;" id="ip-addr-label"></h3>
   <p>
-    <a class="btn btn-primary btn-large">show history</a>
+    <a class="btn btn-primary btn-large" href="#" onclick="location.reload();">show history</a>
   </p>
 </div>
